Quote/myservice-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quote
  template:
    metadata:
      labels:
        app: quote
    spec:
      containers:
        - image: noureddinebert/quote:1.1
          imagePullPolicy: IfNotPresent
          name: quote
      restartPolicy: Always
