Quote/myservice-loadbalancing-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: quote
  name: quote
spec:
  ports:
    - nodePort: 30945
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: quote
  type: LoadBalancer
