Quote/myservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: quote
spec:
  ports:
    - name: http
      targetPort: 8080
      port: 80
  type: ClusterIP
  selector:
    app: quote
